--- a/onboard/onboard.csproj
+++ b/onboard/onboard.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="awssdk.s3" Version="3.7.101.15" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
