--- a/onboard/onboard.csproj
+++ b/onboard/onboard.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="awssdk.s3" Version="3.7.101.15" />
     <PackageReference Include="devcade-library" Version="1.1.0" />
+    <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
