--- a/onboard/app.config
+++ b/onboard/app.config
@@ -8,7 +8,7 @@
             <appendToFile value="true" />
             <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
             <layout type="log4net.Layout.PatternLayout">
-                <conversionPattern value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff} %-5level [%-30logger] - %message%newline" />
+                <conversionPattern value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff} %-7level [%-30logger] - %message%newline" />
             </layout>
         </appender>
         <appender name="LatestAppender" type="log4net.Appender.FileAppender">
@@ -16,13 +16,21 @@
             <appendToFile value="false" />
             <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
             <layout type="log4net.Layout.PatternLayout">
-                <conversionPattern value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff} %-5level [%-30logger] - %message%newline" />
+                <conversionPattern value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff} %-7level [%-30logger] - %message%newline" />
             </layout>
         </appender>
         <appender name="ColoredConsoleAppender" type="log4net.Appender.ManagedColoredConsoleAppender">
             <mapping>
-                <level value="DEBUG" />
+                <level value="TRACE"/>
                 <foreColor value="Magenta" />
+            </mapping>
+            <mapping>
+                <level value="VERBOSE" />
+                <foreColor value="White" />
+            </mapping>
+            <mapping>
+                <level value="DEBUG" />
+                <foreColor value="Cyan" />
             </mapping>
             <mapping>
                 <level value="INFO" />
@@ -42,11 +50,11 @@
                 <backColor value="Red" />
             </mapping>
             <layout type="log4net.Layout.PatternLayout">
-                <conversionPattern value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff} %-5level [%-30logger] - %message%newline" />
+                <conversionPattern value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff} %-7level [%-30logger] - %message%newline" />
             </layout>
         </appender>
         <root>
-            <level value="ALL" />
+            <level value="INFO" /> // Don't change this here, change it in LogConfig.cs
             <appender-ref ref="FileAppender" />
             <appender-ref ref="LatestAppender" />
             <appender-ref ref="ColoredConsoleAppender" />
