--- a/onboard/backend/Cargo.toml
+++ b/onboard/backend/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.70"
+dotenv = "0.15.0"
 env = "0.0.0"
 env_logger = "0.10.0"
 futures-util = "0.3.27"
