Update to new game JSON

--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -1,1 +1,12 @@
+# Backend
 RUST_LOG=
+DEVCADE_API_DOMAIN=
+DEVCADE_DEV_API_DOMAIN=
+
+# Frontend
+FRONTEND_LOG=
+VIEW_WIDTH=
+VIEW_HEIGHT=
+
+# Shared
+DEVCADE_PATH=
