Frontend no longer requires backend to be launched first

--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -1,3 +1,7 @@
+# This file should be copies to .env and filled with the correct values
+# for your environment. The .env file should live in the same directory
+# as this file.
+
 # Backend
 RUST_LOG=
 DEVCADE_API_DOMAIN=
