--- a/onboard/backend/Cargo.toml
+++ b/onboard/backend/Cargo.toml
@@ -11,6 +11,7 @@ dotenv = "0.15.0"
 env = "0.0.0"
 env_logger = "0.10.0"
 futures-util = "0.3.27"
+lazy_static = "1.4.0"
 libc = "0.2.140"
 log = "0.4.17"
 reqwest = { version = "0.11.15", features = ["blocking", "json"] }
