Fix some games not launching & readme

--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -3,11 +3,13 @@
 # as this file.
 
 # Backend
+# Allowed log levels: trace, debug, info, warn, error
 RUST_LOG=
 DEVCADE_API_DOMAIN=
 DEVCADE_DEV_API_DOMAIN=
 
 # Frontend
+# Allowed log levels: trace, verbose, debug, info, warn, error, fatal
 FRONTEND_LOG=
 VIEW_WIDTH=
 VIEW_HEIGHT=
