Added demo mode and better error handling

--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -13,6 +13,9 @@ DEVCADE_DEV_API_DOMAIN=
 FRONTEND_LOG=
 VIEW_WIDTH=
 VIEW_HEIGHT=
+# Demo mode will not display games with certain tags (e.g. "CSH Only")
+# Allowed values: true, false
+DEMO_MODE=
 
 # Shared
 DEVCADE_PATH=
