--- a/onboard/backend/Cargo.toml
+++ b/onboard/backend/Cargo.toml
@@ -19,5 +19,5 @@ log = "0.4.17"
 reqwest = { version = "0.11.15", features = ["blocking", "json"] }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
-tokio = { version = "1.26.0", features = ["macros"] }
+tokio = { version = "1.26.0", features = ["macros", "process"] }
 zip = "0.6.4"
