--- a/onboard/backend/Cargo.toml
+++ b/onboard/backend/Cargo.toml
@@ -22,3 +22,6 @@ serde_json = "1.0.94"
 tokio = { version = "1.26.0", features = ["macros", "process", "fs"] }
 zip = "0.6.4"
 devcade_onboard_types = { path = "../types" }
+serde_yaml = "0.9.25"
+base64 = "0.21.4"
+hex = "0.4.3"
