--- a/onboard/backend/Cargo.toml
+++ b/onboard/backend/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
-dotenv = "0.15.0"
 env_logger = "0.10.0"
 futures-util = "0.3.27"
 gatekeeper-members = "0.3.0"
@@ -20,3 +19,4 @@ serde_json = "1.0.94"
 tokio = { version = "1.26.0", features = ["macros", "process", "fs"] }
 devcade_onboard_types = { path = "../types" }
 libflatpak = "0.3.0"
+dotenvy = "0.15.7"
