--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -4,18 +4,19 @@
 
 # Backend
 # Allowed log levels: trace, debug, info, warn, error
-RUST_LOG=
-DEVCADE_API_DOMAIN=
-DEVCADE_DEV_API_DOMAIN=
+RUST_LOG= #Logging level for the backend
+DEVCADE_API_DOMAIN= #URL for devcade API 
+DEVCADE_DEV_API_DOMAIN= #URL for devcade-dev API
 
 # Frontend
 # Allowed log levels: trace, verbose, debug, info, warn, error, fatal
-FRONTEND_LOG=
-VIEW_WIDTH=
+FRONTEND_LOG= # Logging level for the frontend
+VIEW_WIDTH= 
 VIEW_HEIGHT=
 # Demo mode will not display games with certain tags (e.g. "CSH Only")
 # Allowed values: true, false
 DEMO_MODE=
 
 # Shared
+# Games data and shared sockets will be placed here
 DEVCADE_PATH=
