Separated spacing variable into 2 - one for instructions and one for descriptions/error messages

--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -20,4 +20,5 @@ DEMO_MODE=
 # Shared
 # Games data and shared sockets will be placed here
 DEVCADE_PATH=
-Y_SCALING_AMOUNT=
+Y_SCALE_INSTRUCTIONS=
+Y_SCALE_DESC=
