--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -13,6 +13,9 @@ DEVCADE_DEV_API_DOMAIN= #URL for devcade-dev API
 FRONTEND_LOG= # Logging level for the frontend
 VIEW_WIDTH= 
 VIEW_HEIGHT=
+SCREENSAVER_TIMEOUT_SEC= # Amount of time in seconds until the screen saver is shown
+SUPERVISOR_BUTTON_TIMEOUT_SEC= # Amount of time in seconds that the supervisor
+
 # Demo mode will not display games with certain tags (e.g. "CSH Only")
 # Allowed values: true, false
 DEMO_MODE=
