fixed err where env was including comment after timer values

--- a/onboard/.env.template
+++ b/onboard/.env.template
@@ -13,8 +13,10 @@ DEVCADE_DEV_API_DOMAIN= #URL for devcade-dev API
 FRONTEND_LOG= # Logging level for the frontend
 VIEW_WIDTH= 
 VIEW_HEIGHT=
-SCREENSAVER_TIMEOUT_SEC= # Amount of time in seconds until the screen saver is shown
-SUPERVISOR_BUTTON_TIMEOUT_SEC= # Amount of time in seconds that the supervisor
+# Amount of time in seconds until the screen saver is shown
+SCREENSAVER_TIMEOUT_SEC=
+# Amount of time in seconds that the supervisor
+SUPERVISOR_BUTTON_TIMEOUT_SEC=
 
 # Demo mode will not display games with certain tags (e.g. "CSH Only")
 # Allowed values: true, false
